# APD---Antialiasing-si-micro-renderer

./: Makefile  Readme.txt  checker.sh  jpegToPnm.sh
in/: pexels-photo-1157255.pnm  pexels-photo-206622.pnm  pexels-photo-230794.pnm  pexels-photo-542347.pnm
out_ref/: 2mandelbrot.jpg.pnm  2pexels-photo-1157255.pnm  2pexels-photo-206622.pnm  2pexels-photo-230794.pnm  2pexels-photo-373543.pnm  2pexels-photo-542347.pnm  31000.pgm  32725584-milky-way-4k-background-desktop.pnm  3grayscale1.pgm  3mandelbrot.jpg.pnm  3pexels-photo-1157255.pnm  3pexels-photo-206622.pnm  3pexels-photo-230794.pnm  3pexels-photo-373543.pnm  3pexels-photo-542347.pnm  81000.pgm  82725584-milky-way-4k-background-desktop.pnm  82744097-tree-4k-screen-wallpaper.pnm  8Thingvellir_by_pattersa.pnm  8grayscale1.pgm  8images.pnm  8images1.pnm  8mandelbrot.jpg.pnm  8pexels-photo-1157255.pnm  8pexels-photo-206622.pnm  8pexels-photo-230794.pnm  8pexels-photo-373543.pnm  8pexels-photo-542347.pnm
src/: CMakeLists.txt  homework.c  homework.h  homework1.c  homework1.h
